--- a/ProfileStyle.css
+++ b/ProfileStyle.css
@@ -101,7 +101,7 @@ figcaption {
 .bio {
     font-size: x-small;
     text-align: center;
-
+    padding-bottom: 15px;
     padding-left: 5%;
     padding-right: 5%;
 }
@@ -112,10 +112,14 @@ figcaption {
     border: 2px rgb(210, 210, 210);
     border-style: dashed;
     border-radius: 15px;
-    display: block;
+    display: flex;
+    align-items: center;
     text-align: center;
+    justify-content: space-evenly;    
+    padding-left: 5px;
     margin: 0 10% 0;
     padding-top: 5%;
+    padding-bottom: 5%;
 }
 .SocButton>img {
     display: inline-block;
@@ -128,4 +132,5 @@ figcaption {
     display: inline-block;
     font-family: monospace;
     font-weight: 900;
+    font-size:large;
 }
