--- a/ProfileStyle.css
+++ b/ProfileStyle.css
@@ -25,6 +25,14 @@ nav ul li{
     display: inline-block;
     margin-right: 20px;
 }
+.logo{
+    display: flex;
+    align-items: center;
+    max-width: 5rem;
+}
+.logo p{
+    margin-left: 0;
+}
 a{
     text-decoration: none;
     color: #555;
@@ -52,25 +60,6 @@ p{
     margin-left: 20px;
     display: none;
 }
-
-
-
-/* Miniprofile 15%
-#miniprofile {
-    background-color: aliceblue;
-    display: block;
-    position: absolute;
-    top: 25%;
-    left: 7%;
-    width: 15%;
-    border-radius: 50px;
-    border: 2px rgb(172, 147, 219);
-    border-style: solid;
-    
-    
-}
-*/
-
 .header-perfil img{
     max-width: 9.375rem;    
     border-radius: 10rem;    
@@ -93,11 +82,13 @@ figcaption {
 }
 
 
+
 .perfil{
     display: flex;
     flex-wrap: wrap;
     display: block;
     position: absolute;
+    max-height: 100%;
     background: aliceblue;
     border-radius: 6rem;
     left: 1;
@@ -137,12 +128,9 @@ figcaption {
 }
 
 
+
 @media only screen and (max-width: 800px){
-    *{
-        margin-left: 0.5rem;
-        margin-right: 5rem;
-    }
-    
+    /*------menu-hamburguer--------*/
     nav ul{
         margin-top: 20px;
         position: absolute;
@@ -165,16 +153,21 @@ figcaption {
     .menu-icon{        
         display: block;
         cursor: pointer;
+    }
+    /*------fim-menu-hamburguer--------*/    
+    .logo p{
+        display: none;
     }    
     .perfil{
-        margin-top: 9rem;       
-        display: block; 
+        margin-top: 8rem;       
+        display: block;
+        width: 98%;
         max-width: 100%;
-        width: 100%; 
-        border-radius: 50px;        
-        margin-left: 0;
-        margin-right: 2rem;
-        background: aliceblue;      
+        margin-left: 1%;       
+        border-radius: 50px; 
+        padding-left: auto;
+        padding-right: auto;       
+        background: #999;      
     }    
     .perfil h3{
         margin-left: auto;
