--- a/ProfileStyle.css
+++ b/ProfileStyle.css
@@ -3,6 +3,29 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+  
+#imagem {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover; 
+    z-index: -1; 
+}
+.repositorios{
+    background: white;
+    display: flex;
+    margin-top: 20rem;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+   
+     
+     
+}  
 body{
     margin: 0;
     padding: 0;
@@ -50,10 +73,11 @@ p{
     height: 100%;
 }
 .container{
-    max-width: 1300px;
+    max-width: 100%;
     margin: auto;
     padding-left: 25px;
     padding-right: 25px;
+    background:white;
 }
 .menu-icon{
     width: 50px;
@@ -93,6 +117,7 @@ figcaption {
     border-radius: 6rem;
     left: 1;
     width: 12rem;
+    margin-top: 4rem;
     margin-left: 3rem;    
     padding-left: 0.938rem;
     padding-right: 0.625rem;
@@ -159,7 +184,7 @@ figcaption {
         display: none;
     }    
     .perfil{
-        margin-top: 8rem;       
+        margin-top: 20rem;       
         display: block;
         width: 98%;
         max-width: 100%;
@@ -186,4 +211,14 @@ figcaption {
         display: none;
     }
 
+}
+
+
+@media only screen and (max-width: 400px){
+    .navbar{
+        width: 100% !important;
+    }
+    body{
+        max-width: 90%;
+    }
 }
