--- a/ProfileStyle.css
+++ b/ProfileStyle.css
@@ -7,7 +7,7 @@
   
 #imagem {
     position: fixed;
-    top: 0;
+    
     left: 0;
     width: 100%;
     height: 100%;
@@ -17,12 +17,13 @@
 .repositorios{
     background: white;
     display: flex;
-    margin-top: 20rem;
+    align-self:auto;
+    margin-top: 20rem;    
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
-   
+   z-index: -1;
      
      
 }  
@@ -216,9 +217,25 @@ figcaption {
 
 @media only screen and (max-width: 400px){
     .navbar{
-        width: 100% !important;
+        width: 100%;
+        max-width: 100%;      
+         
     }
-    body{
-        max-width: 90%;
+    *{
+        overflow-y: hidden;
     }
+    .perfil{
+        margin-top: 13rem;       
+        display: block;
+        width: 98%;        
+        max-width: 100%;              
+        border-radius: 50px; 
+        padding-left: auto;
+        padding-right: auto;       
+        background: #999; 
+        z-index: 1;   
+    }
+    
+    
+    
 }
