--- a/ProfileStyle.css
+++ b/ProfileStyle.css
@@ -7,7 +7,7 @@
   
 #imagem {
     position: fixed;
-    
+    top:0;
     left: 0;
     width: 100%;
     height: 100%;
@@ -215,7 +215,7 @@ figcaption {
 }
 
 
-@media only screen and (max-width: 400px){
+@media only screen and (max-width: 450px){
     .navbar{
         width: 100%;
         max-width: 100%;      
