--- a/ProfileStyle.css
+++ b/ProfileStyle.css
@@ -3,7 +3,40 @@
     padding: 0;
     box-sizing: border-box;
 }
+.ProfilePicture {
+    width: 150px;
+    height: 150px;
+    object-fit: cover;
+    border-radius: 50%;
+    cursor: pointer;
+}
 
+.header-perfil {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    cursor: pointer;
+}
+
+
+
+.texto {
+    width: 100%; /* Para que o texto ocupe toda a largura disponível */
+}
+
+.bio {
+    width: 100%; /* Para que o texto ocupe toda a largura disponível */
+    display: block;
+    word-wrap: break-word;
+}
+
+#bioInput {
+    width: 100%;
+    height: auto;
+    resize: vertical; /* Permite redimensionar verticalmente */
+    box-sizing: border-box;
+    min-height: 100px; /* Altura mínima para o textarea */
+}
   
 #imagem {
     position: fixed;
@@ -92,6 +125,9 @@ p{
     
     padding-left: auto;
     padding-right: auto;
+}
+.bio img{
+    padding-top: 2px;
 }
 .perfil h4{
     margin-left: auto;
